// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when applied with \`include\` option matches snapshot for a single \`include\` value ({RegExp}): assets 1`] = `
Array [
  Array [
    "1.async.js.gz?ver=1ea6f97e389bd951fd50",
    117,
  ],
  Array [
    "1.async.js?ver=1ea6f97e389bd951fd50",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "js.js.gz?var=1ea6f97e389bd951fd50",
    2773,
  ],
  Array [
    "js.js?var=1ea6f97e389bd951fd50",
    10201,
  ],
]
`;

exports[`when applied with \`include\` option matches snapshot for a single \`include\` value ({RegExp}): errors 1`] = `Array []`;

exports[`when applied with \`include\` option matches snapshot for a single \`include\` value ({RegExp}): warnings 1`] = `Array []`;

exports[`when applied with \`include\` option matches snapshot for multiple \`include\` values ({Array<RegExp>}): assets 1`] = `
Array [
  Array [
    "1.async.js.gz?ver=1ea6f97e389bd951fd50",
    117,
  ],
  Array [
    "1.async.js?ver=1ea6f97e389bd951fd50",
    130,
  ],
  Array [
    "5b1f36bc41ab31f5b801d48ba1d65781.png",
    78117,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg",
    672,
  ],
  Array [
    "96621d3c37d96ad3bf792fcc848d912f.svg.gz",
    393,
  ],
  Array [
    "js.js.gz?var=1ea6f97e389bd951fd50",
    2773,
  ],
  Array [
    "js.js?var=1ea6f97e389bd951fd50",
    10201,
  ],
]
`;

exports[`when applied with \`include\` option matches snapshot for multiple \`include\` values ({Array<RegExp>}): errors 1`] = `Array []`;

exports[`when applied with \`include\` option matches snapshot for multiple \`include\` values ({Array<RegExp>}): warnings 1`] = `Array []`;
